# keras2cpp

./: CMakeLists.txt  README.md  dump_to_simple_cpp.py  example_main.cc  fileio.cc  fileio.h  keras_model.cc  keras_model.h  layers.cc  layers.h
example/: cifar-10.py  mnist_cnn_one_iteration.py
